finished refactoring tests + fixed DAOs